Prevented line breaks in the navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -672,6 +672,7 @@ footer .copyright {
 }
 .navbar-inverse .nav > li > a {
   color: #ddd;
+  white-space: nowrap;
 }
 
 .navbar-inverse .nav .active > a,.navbar-inverse .nav .active > a:hover,.navbar-inverse .nav .active > a:focus {
